# agentic-engineering-ai-apps

./: .gitignore  README.md
.devcontainer/: devcontainer.json
.github/agents/: copilot-instructions.md
backend/: pyproject.toml
backend/src/services/: session_service.py
backend/tests/: test_sessions.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Controls.tsx  SettingsModal.tsx  TimerDisplay.tsx  TodaySummary.tsx
frontend/src/components/__tests__/: Controls.test.tsx  SettingsModal.test.tsx  TimerDisplay.test.tsx  TodaySummary.test.tsx
frontend/src/hooks/: useTimerService.ts
frontend/src/hooks/__tests__/: useTimerService.test.ts
specs/002-break-timer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-break-timer/checklists/: requirements.md
workshop/: README.md
